src/test/deca/syntax/invalid/sansObjets/invalidWhile.deca
// Description:
//    tests de programme incorrect syntaxiquement (while invalide)
//
// Historique:
//    @DATE@

{

    int x = 5;
    while (x < 9) ;
}